CMTYAEM-640 Spacing issues between components fixed

--- a/ui.frontend/src/main/webpack/components/faq/scss/styles/_default.scss
+++ b/ui.frontend/src/main/webpack/components/faq/scss/styles/_default.scss
@@ -13,4 +13,9 @@
         font-size: 16px;
         line-height: 22px;
     }
+
+    .cmp-text h1, h2, h3, p {
+      margin-bottom: 24px;
+    }
+
 }
